# picasso

./: .env.example  Dockerfile  Readme.md  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
nginx/: Dockerfile
picasso_test/: .env  db.sqlite3  dump.rdb  manage.py
picasso_test/api/: admin.py  exceptions.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
picasso_test/api/migrations/: 0001_initial.py  0002_alter_file_file.py
picasso_test/mock/: mock.txt
picasso_test/picasso_test/: asgi.py  celery.py  settings.py  wsgi.py
